<resources>
    <string name="app_name">M-Expense</string>

    <string name="is_risk_assessment_text">"Is Risk Assessment: %1$s"</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="hint_TripName">Summer Vacation</string>
    <string name="hint_Destination">Ha Long Bay</string>
    <string name="text_require_risk_assessment">Require Risk Assessment?</string>
    <string name="text_btn_create">Create</string>
    <string name="textLabelTripName">Trip name</string>
    <string name="textLabelTripDestination">Trip Destination</string>
    <string name="textLabelTripDate">Trip Date</string>
    <string name="textPlaceholderTripDate">Click here to show DatePicker</string>
    <string name="textLabelExpenseType">Expense Type</string>
    <string name="hint_ExpenseType">Food</string>
    <string name="textLabelExpenseTime">Expense Time</string>
    <string name="textPlaceholderExpenseTime">Click here to pick time of Expense</string>
    <string name="hint_ExpenseAmount">1000</string>
    <string name="textLabelExpenseAmount">Expense Amount</string>
    <string name="server_origin">https://comp1786.azurewebsites.net</string>
    <string name="label_btn_upload">Upload</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="content_description_add_trip">Add trip</string>
    <string name="content_description_edit_trip">Edit trip</string>
    <string name="content_description_delete_trip">Delete trip</string>
    <string name="content_description_search_trip">Search Trip</string>
    <string name="content_description_delete_all_trips">Delete all trips</string>
    <string name="content_description_add_expense">Add expense</string>
    <string name="content_description_upload">Upload to Cloud</string>
    <string name="upload">Upload</string>
    <string name="sample_user_id">nt4738f</string>
    <string name="search_hint">Enter Trip Name</string>
    <string name="text_save">Save</string>
</resources>