<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:contentDescription="@string/content_description_add_expense"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:contentDescription="@string/content_description_edit_trip"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:contentDescription="@string/content_description_delete_trip"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>